Clarify sentiment classification categories in intro

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 1.1 Introduction\n",
     "\n",
-    "This project aims to classify sentiments in tweets mentioning Apple and Google products into three categories: positive, neutral, or negative. Sentiment analysis is a key application of natural language processing (NLP) that helps organizations understand public opinion at scale.\n",
+    "This project aims to classify sentiments in tweets mentioning Apple and Google products into three categories namely: positive, neutral, or negative. Sentiment analysis is a key application of natural language processing (NLP) that helps organizations understand public opinion at scale.\n",
     "\n",
     "\n",
     "## 1.2 Problem Statement\n",
