--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "### 1.3.1 Main Objective\n",
     "\n",
-    "Build an accurate and efficient natural language processing model to classify tweets mentioning Apple and Google products into three sentiment categories: `positive`, `neutral` and `negative`.\n",
+    "Build an accurate and efficient natural language processing model to classify tweets mentioning Apple and Google products into three sentiment categories namely: `positive`, `neutral` and `negative`.\n",
     "\n",
     "### 1.3.2 Specific objectives\n",
     "\n",
