Update comment for column renaming in DataFrame

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "# renaming the columns\n",
+    "# renaming of the columns\n",
     "df = df.rename(columns={'tweet_text': 'tweet', 'emotion_in_tweet_is_directed_at': 'directed_at', 'is_there_an_emotion_directed_at_a_brand_or_product':'sentiment'})\n",
     "df.sample()"
    ]
