--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "# checking the information of the dataset\n",
+    "# checking of the information of the dataset\n",
     "df.info()"
    ]
   },
