--- a/apple.ipynb
+++ b/apple.ipynb
@@ -38,11 +38,15 @@
     "\n",
     "### 1.3.2 Specific objectives\n",
     "\n",
-    "- To explore and analyze the tweet data and provide actionable insights\n",
+    "- To explore and analyze the tweet data between the two companies\n",
     "\n",
     "- To preprocess the data using Natural Language Processing techniques.\n",
     "\n",
-    "- To evaluate classifier performance using appropriate metrics\n",
+    "- To develop and evaluate classifier performance using appropriate metrics\n",
+    "\n,"
+    "- To provide actionable, data-driven insights and recommendations\n",
+    "\n",
+    "- To successfully deploy the model into the production environment\n",
     "\n"
    ]
   },
