--- a/apple.ipynb
+++ b/apple.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e172c1d",
    "metadata": {},
    "outputs": [],
@@ -67,38 +67,7 @@
     "\n",
     "# Visualization libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from wordcloud import WordCloud\n",
-    "\n",
-    "# Text processing libraries\n",
-    "import re\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "\n",
-    "# Modeling libraries\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, ConfusionMatrixDisplay\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.svm import LinearSVC\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
-    "\n",
-    "# Model persistence\n",
-    "import joblib\n",
-    "\n",
-    "# Deep learning libraries\n",
-    "import torch\n",
-    "from transformers import pipeline\n",
-    "\n",
-    "\n",
-    "# suppressing warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "import seaborn as sns\n"
    ]
   },
   {
@@ -111,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "39f70007",
    "metadata": {},
    "outputs": [
@@ -199,20 +168,20 @@
        "4                                   Positive emotion  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data/judge-1377884607_tweet_product_company.csv', encoding='latin1')\n",
+    "df = pd.read_csv('judge-1377884607_tweet_product_company.csv', encoding='latin1')\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f7276b3e",
    "metadata": {},
    "outputs": [
@@ -239,88 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96933be3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_text</th>\n",
-       "      <th>emotion_in_tweet_is_directed_at</th>\n",
-       "      <th>is_there_an_emotion_directed_at_a_brand_or_product</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>9092</td>\n",
-       "      <td>3291</td>\n",
-       "      <td>9093</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>9065</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>RT @mention Marissa Mayer: Google Will Connect...</td>\n",
-       "      <td>iPad</td>\n",
-       "      <td>No emotion toward brand or product</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>5</td>\n",
-       "      <td>946</td>\n",
-       "      <td>5389</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               tweet_text  \\\n",
-       "count                                                9092   \n",
-       "unique                                               9065   \n",
-       "top     RT @mention Marissa Mayer: Google Will Connect...   \n",
-       "freq                                                    5   \n",
-       "\n",
-       "       emotion_in_tweet_is_directed_at  \\\n",
-       "count                             3291   \n",
-       "unique                               9   \n",
-       "top                               iPad   \n",
-       "freq                               946   \n",
-       "\n",
-       "       is_there_an_emotion_directed_at_a_brand_or_product  \n",
-       "count                                                9093  \n",
-       "unique                                                  4  \n",
-       "top                    No emotion toward brand or product  \n",
-       "freq                                                 5389  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Getting the statistical summary\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mdf\u001b[49m.describe()\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -330,19 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76bbf017",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(9093, 3)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m.shape\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2201,7 +2103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2215,7 +2117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
