--- a/apple.ipynb
+++ b/apple.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9e172c1d",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,38 @@
     "\n",
     "# Visualization libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "from wordcloud import WordCloud\n",
+    "\n",
+    "# Text processing libraries\n",
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "# Modeling libraries\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, ConfusionMatrixDisplay\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
+    "\n",
+    "# Model persistence\n",
+    "import joblib\n",
+    "\n",
+    "# Deep learning libraries\n",
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "\n",
+    "# suppressing warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
